# WeTextProcessing

./: .flake8  .gitignore  .pre-commit-config.yaml  CPPLINT.cfg  README.md  inverse_normalize.py  normalize.py  pyproject.toml  requirements.txt  setup.py  token_parser.py
.github/workflows/: android.yml  runtime.yml  unittest.yml  wheels.yml
data/char/: charset_extension.tsv  charset_national_standard_2013_8105.tsv  fullwidth_to_halfwidth.tsv  lower2upper.tsv  upper2lower.tsv
data/date/: d.tsv  dd.tsv  m.tsv  mm.tsv
data/default/: blacklist.tsv  whitelist.tsv
data/erhua/: whitelist.tsv
data/math/: operator.tsv
data/measure/: units_en.tsv  units_zh.tsv
data/money/: code.tsv  symbol.tsv
data/number/: digit.tsv  dot.tsv  num.tsv  sign.tsv  teen.tsv  zero.tsv
data/time/: hour.tsv  min_sec.tsv  noon.tsv
data/whitelist/: default.tsv
itn/: README.md  __main__.py  main.py  processor.py  zh_itn_tagger.fst  zh_itn_verbalizer.fst
itn/chinese/: inverse_normalizer.py
itn/chinese/rules/: cardinal.py  char.py  date.py  fraction.py  license_plate.py  math.py  measure.py  money.py  postprocessor.py  preprocessor.py  time.py  train_number.py  whitelist.py
itn/chinese/test/: normalizer_test.py  normalizer_test_disable_standalone_number.py
itn/english/: inverse_normalizer.py
itn/english/data/: date_period.tsv  measurements.tsv  whitelist.tsv  whitelist_tech.tsv  year_suffix.tsv
itn/english/rules/: cardinal.py  char.py  date.py  decimal.py  electronic.py  inverse_normalizer.py  measure.py  money.py  ordinal.py  punctuation.py  telephone.py  time.py  utils.py  whitelist.py  word.py
itn/english/test/: normalizer_test.py  utils.py
itn/japanese/: inverse_normalizer.py
itn/japanese/rules/: cardinal.py  date.py  fraction.py  math.py  measure.py  money.py  ordinal.py  postprocessor.py  preprocessor.py  time.py  whitelist.py
itn/japanese/test/: normalizer_test.py
processors/: cardinal.py  char.py  date.py  fraction.py  math.py  measure.py  money.py  normalizer.py  postprocessor.py  preprocessor.py  processor.py  time.py  whitelist.py
runtime/: CMakeLists.txt  CMakePresets.json  README.md
runtime/android/: .gitignore  build.gradle.kts  settings.gradle  settings.gradle.kts
runtime/android/app/: build.gradle  build.gradle.kts
runtime/android/app/src/androidTest/java/com/mobvoi/WeTextProcessing/: ExampleInstrumentedTest.java
runtime/android/app/src/androidTest/java/com/wenet/WeTextProcessing/: ExampleInstrumentedTest.java
runtime/android/app/src/main/: AndroidManifest.xml
runtime/android/app/src/main/assets/: README.md  zh_itn_tagger.fst  zh_itn_verbalizer.fst  zh_tn_tagger.fst  zh_tn_verbalizer.fst
runtime/android/app/src/main/cpp/: CMakeLists.txt  cmake  patch  processor  wetextprocessing.cc
runtime/android/app/src/main/java/com/mobvoi/WeTextProcessing/: MainActivity.java  WeTextProcessing.java
runtime/android/app/src/main/java/com/wenet/WeTextProcessing/: MainActivity.java  MainActivity.kt  Theme.kt  WeTextProcessing.java  WeTextProcessing.kt
runtime/android/app/src/main/jniLibs/: .gitignore
runtime/android/app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
runtime/android/app/src/main/res/layout/: activity_main.xml
runtime/android/app/src/main/res/values/: strings.xml  themes.xml
runtime/android/app/src/main/res/values-night/: themes.xml
runtime/android/app/src/test/java/com/mobvoi/WeTextProcessing/: ExampleUnitTest.java
runtime/android/app/src/test/java/com/wenet/WeTextProcessing/: ExampleUnitTest.java
runtime/android/gradle/: libs.versions.toml
runtime/bindings/android/: CMakeLists.txt  wetextprocessing.cc
runtime/cmake/: gflags.cmake  glog.cmake  gtest.cmake  openfst.cmake
runtime/patch/openfst/src/: CMakeLists.txt
runtime/patch/openfst/src/test/: CMakeLists.txt
runtime/processor/: CMakeLists.txt  processor.cc  processor.h  token_parser.cc  token_parser.h  wetext_processor.cc  wetext_processor.h  wetext_processor_c_api.cc  wetext_processor_c_api.h  wetext_token_parser.cc  wetext_token_parser.h
runtime/test/: CMakeLists.txt  processor_test.cc  string_test.cc  token_parser_test.cc  utf8_string_test.cc
runtime/utils/: CMakeLists.txt  flags.h  log.h  string.cc  string.h  utf8_string.cc  utf8_string.h  utils.cc  utils.h  wetext_flags.h  wetext_log.h  wetext_string.cc
test/: __init__.py  char_test.py  date_test.py  math_test.py  money_test.py  normalizer_test.py  postprocessor_test.py  preprocessor_test.py  test_cardinal.py  test_char.py  test_date.py  test_fraction.py  test_math.py  test_measure.py  test_money.py  test_normalizer.py  test_postprocessor.py  test_preprocessor.py  test_time.py  test_token_parser.py  test_whitelist.py  token_parser_test.py  utils.py  whitelist_test.py
test/data/: cardinal.txt  fraction.txt  measure.txt  normalizer.txt  number.txt
tn/: README.md  __main__.py  main.py  processor.py  token_parser.py  utils.py  zh_tn_tagger.fst
tn/chinese/: normalizer.py
tn/chinese/rules/: cardinal.py  char.py  date.py  fraction.py  math.py  measure.py  money.py  postprocessor.py  preprocessor.py  sport.py  time.py  whitelist.py
tn/chinese/test/: cardinal_test.py  char_test.py  date_test.py  fraction_test.py  math_test.py  measure_test.py  money_test.py  normalizer_test.py  postprocessor_test.py  preprocessor_test.py  sport_test.py  time_test.py  token_parser_test.py  utils.py  whitelist_test.py
tn/english/: normalizer.py
tn/english/data/: suppletive.tsv
tn/english/rules/: cardinal.py  date.py  decimal.py  electronic.py  fraction.py  measure.py  money.py  ordinal.py  punctuation.py  range.py  roman.py  serial.py  telephone.py  time.py  whitelist.py  word.py
tn/english/test/: cardinal_test.py  date_test.py  decimal_test.py  electronic_test.py  fraction_test.py  measure_test.py  money_test.py  normalizer_test.py  ordinal_test.py  range_test.py  roman_test.py  telephone_test.py  time_test.py  utils.py  white_list_test.py  whitelist_test.py  word_test.py
tn/japanese/: normalizer.py
tn/japanese/rules/: cardinal.py  char.py  date.py  fraction.py  math.py  money.py  (+7 more)
(+199 files in other folders)
